# rules_apple

./: .bazelrc  .bazelversion  .gitignore  .pre-commit-config.yaml  .travis.yml  .travis_build.sh  .travis_install.sh  0001-Expose-stardoc-output-files-as-runfiles-139.patch  BUILD  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MAINTENANCE.md  MODULE.bazel  README.md  WORKSPACE  apple_archive_review.md  bazel_features.patch  platform_mappings  platform_mappings_visionos  script.sh
.bazelci/: presubmit.yml  update_workspace_to_deps_heads.sh  xcode_debug.sh
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.ci/: rules_apple.json
.github/: generate-notes.sh  update-module-version.sh
.github/workflows/: create-release.yml  macos-latest-xcode.yml  main.yml  presubmit.yml
.travis/: build.sh  install.sh
apple/: BUILD  apple.bzl  apple_archive.bzl  apple_binary.bzl  apple_feature_allowlist.bzl  apple_genrule.bzl  apple_imports.bzl  apple_static_library.bzl  apple_universal_binary.bzl  apple_xcframework.bzl  aspects.bzl  capabilities.bzl  cc_toolchain_forwarder.bzl  common.bzl  docc.bzl  dtrace.bzl  extensions.bzl  header_map.bzl  ios.bzl  ios.doc.bzl  licenses.bzl  linker.bzl  macos.bzl  macos.doc.bzl  objc.bzl  providers.bzl  repositories.bzl  resources.bzl  swift.bzl  tvos.bzl  tvos.doc.bzl  utils.bzl  versioning.bzl  visionos.bzl  visionos.doc.bzl  watchos.bzl  watchos.doc.bzl  xcarchive.bzl  xcodeproj.bzl  xctrunner.bzl
apple/build_settings/: BUILD  attrs.bzl  build_settings.bzl
apple/bundling/: BUILD  README.md  apple_bundling_aspect.bzl  attribute_support.bzl  binary_support.bzl  bitcode_actions.bzl  bundler.bzl  bundler_unittest.py  bundling_support.bzl  clang_support.bzl  codesigning_support.bzl  debug_symbol_actions.bzl  dsym_actions.bzl  entitlements.bzl  file_actions.bzl  file_support.bzl  framework_support.bzl  ios_rules.bzl  linker_support.bzl  macos_command_line_support.bzl  macos_rules.bzl  mock_support.bzl  modulemap_actions.bzl  platform_support.bzl  plist_actions.bzl  plist_support.bzl  plisttool_unittest.py  product_actions.bzl  product_support.bzl  provider_support.bzl  resource_actions.bzl  resource_support.bzl  rule_attributes.bzl  rule_factory.bzl  run_actions.bzl  smart_dedupe.bzl  swift_actions.bzl  swift_support.bzl  test_support.bzl  tvos_rules.bzl  (+2 more)
apple/constraints/: BUILD
apple/hints/: BUILD  app_intents_hint.bzl  apple_resource_hint.bzl
apple/internal/: BUILD  apple_archive.bzl  apple_bundler.bzl  apple_developer_framework_import.bzl  apple_framework_import.bzl  apple_framework_relative_headers.bzl  apple_library.bzl  apple_product_type.bzl  apple_support_toolchain.bzl  apple_toolchains.bzl  apple_universal_binary.bzl  apple_universal_binary_transition.bzl  apple_xcframework_import.bzl  base_transition_support.bzl  binary_support.bzl  bitcode_support.bzl  bundle_package_type.bzl  bundling_support.bzl  bundling_tasks.bzl  capabilities_rules.bzl  cc_info_support.bzl  cc_toolchain_info_support.bzl  clang_modulemap_support.bzl  codesigning_actions.bzl  codesigning_support.bzl  compilation_support.bzl  developer_frameworks.bzl  docc.bzl  entitlement_rules.bzl  entitlements_support.bzl  environment_plist.bzl  experimental.bzl  experimental_mixed_language_library.bzl  exported_symbols_lists_rules.bzl  feature_names.bzl  features_support.bzl  file_support.bzl  fragment_support.bzl  framework_import_support.bzl  header_map.bzl  (+47 more)
apple/testing/: BUILD  DefaultTestBundle.plist  apple_test_bundle_support.bzl  apple_test_rules.bzl  ios.bzl  ios_rules.bzl  macos_rules.bzl
apple/testing/simulator_manager/: BUILD.bazel  README.md  prepare_simulator.sh  start.sh
apple/testing/simulator_manager/Sources/: AccumulatedHTTPHandler.swift  HTTPServer.swift  LRUSet.swift  Logger.swift  Main.swift  PTY.swift  SimulatorControl.swift  SimulatorManager.swift  SimulatorManagerHTTPHandler.swift  SimulatorRequestHandler.swift
apple/testing/simulator_manager/Tests/: SimulatorManagerTests.swift
common/: BUILD  attrs.bzl  define_utils.bzl  path_utils.bzl  providers.bzl
doc/: .rules-ios.md.swp  BUILD.bazel  README.md  apple.md  bazel-skylib.pr307.patch  common_info.md  dtrace.md  frameworks.md  index.md  providers.md  resources.md  rules-apple.md  rules-apple_archive.md  rules-docc.md  rules-dtrace.md  rules-general.md  rules-header_map.md  rules-ios.md  rules-linker.md  rules-macos.md  rules-resources.md  rules-swift.md  rules-tvos.md  rules-versioning.md  rules-visionos.md  rules-watchos.md  rules-xcarchive.md  rules-xctrunner.md  testing.md  types.md  versioning.md
doc/tutorials/: ios-app.md
examples/: BUILD
examples/resources/: BUILD  Localizable.xcstrings
test/: BUILD  README.md  apple_bundle_version_test.sh  apple_core_ml_library_package_test.sh  apple_core_ml_library_test.sh  apple_core_ml_resource_test.sh  apple_framework_relative_headers_test.sh  apple_intent_library_test.sh  apple_metal_library_test.sh  apple_shell_testrunner.sh  apple_shell_testutils.sh  apple_xctestrun_runner_ui_test.sh  apple_xctestrun_runner_unit_test.sh  apple_xctestrun_runner_unit_test_14.x.sh  bazel_testrunner.sh  configurations.bzl  dtrace_test.sh  ios_application_clang_rt_test.sh  ios_application_resources_test.sh  ios_application_swift_resources_test.sh  ios_application_swift_test.sh  ios_application_test.sh  ios_bundle_test.sh  ios_coverage_test.sh  ios_extension_resources_test.sh  ios_extension_swift_test.sh  ios_extension_test.sh  ios_extensionkit_extension_test.sh  ios_framework_import_test.sh  ios_framework_test.sh  ios_imessage_test.sh  ios_static_framework_resources_test.sh  ios_static_framework_test.sh  ios_test_runner_ui_test.sh  ios_test_runner_unit_test.sh  ios_test_runner_unit_test_14.x.sh  ios_ui_test_test.sh  ios_unit_test_resources_test.sh  ios_unit_test_test.sh  ios_xctest_swift_testing_runner_unit_test_17.x.sh  (+32 more)
test/starlark_tests/: BUILD  apple_archive_tests.bzl  (+86 more)
tools/: BUILD  binary_env.bzl  py2and3_test.bzl
tools/xctrunnertool/: BUILD.bazel  run.py
tools/xctrunnertool/lib/: lipo_util.py  logger.py  model.py  plist_util.py  shell.py
(+736 files in other folders)
