"""rules_apple MODULE.bazel file"""

module(
    name = "rules_apple",
    version = "0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
)

bazel_dep(name = "apple_support", version = "2.5.4", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_features", version = "1.36.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(
    name = "rules_swift",
    version = "3.5.0",
    max_compatibility_level = 3,
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# TODO: Remove before the major release after bumping to >=4
archive_override(
    module_name = "rules_swift",
    integrity = "sha256-7B5bIDydWD9OV0eMeh5uJpK2EN2wzlPP7DqyTC/XKu8=",
    strip_prefix = "rules_swift-bc51c2a824f221e4162dc21e049cb99fd81d8152",
    urls = [
        "https://github.com/bazelbuild/rules_swift/archive/bc51c2a824f221e4162dc21e049cb99fd81d8152.tar.gz",
    ],
)

system_sdk = use_extension("@build_bazel_rules_swift//swift:extensions.bzl", "system_sdk")
system_sdk.configure_sdks(
    # NOTE: This doesn't apply to downstream repos
    exclude_modules = {
        "AppleTVOS": [
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "AppleTVSimulator": [
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "iPhoneSimulator": [
            "AssetsLibrary",  #  TODO: Remove once CI >= Xcode 26.4
            "CoreAudio_Private",
        ],
        "iPhoneOS": [
            "AssetsLibrary",  #  TODO: Remove once CI >= Xcode 26.4
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "XROS": [
            "AccessoryTransportExtension",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "XRSimulator": [
            "AccessoryTransportExtension",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "WatchOS": [
            "BrowserEngineKit",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "WatchSimulator": [
            "BrowserEngineKit",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
    },
    include_all = True,
)
use_repo(system_sdk, "system_sdk")

bazel_dep(
    name = "stardoc",
    version = "0.8.0",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)

non_module_deps = use_extension("//apple:extensions.bzl", "non_module_deps")
use_repo(non_module_deps, "xctestrunner")

provisioning_profile_repository = use_extension("//apple:apple.bzl", "provisioning_profile_repository_extension")
use_repo(provisioning_profile_repository, "local_provisioning_profiles")

apple_cc_configure = use_extension("@build_bazel_apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc")

register_toolchains("//apple/internal:apple_xplat_toolchain")

archive_override(
    module_name = "rules_cc",
    integrity = "sha256-HkBnRerUfb96OTmALc0hNPH+DELLo3JKuVIWY1mFq/k=",
    strip_prefix = "rules_cc-7d32823b507e2c8df813de1c4e2fc3100854e124",
    urls = [
        "https://github.com/bazelbuild/rules_cc/archive/7d32823b507e2c8df813de1c4e2fc3100854e124.tar.gz",
    ],
)
