"""rules_apple MODULE.bazel file"""

module(
    name = "rules_apple",
    version = "0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
)

bazel_dep(name = "apple_support", version = "2.5.4")
bazel_dep(name = "bazel_features", version = "1.36.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(
    name = "rules_swift",
    version = "4.0.0-rc1",
    max_compatibility_level = 3,
)
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

system_sdk = use_extension("@rules_swift//swift:extensions.bzl", "system_sdk")
system_sdk.configure_sdks(
    # NOTE: This doesn't apply to downstream repos
    exclude_modules = {
        "AppleTVOS": [
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "AppleTVSimulator": [
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "iPhoneSimulator": [
            "AssetsLibrary",  #  TODO: Remove once CI >= Xcode 26.4
            "CoreAudio_Private",
        ],
        "iPhoneOS": [
            "AssetsLibrary",  #  TODO: Remove once CI >= Xcode 26.4
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "XROS": [
            "AccessoryTransportExtension",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "XRSimulator": [
            "AccessoryTransportExtension",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "WatchOS": [
            "BrowserEngineKit",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
        "WatchSimulator": [
            "BrowserEngineKit",
            "CoreAudio_Private",  # TODO: Remove once CI >= Xcode 26.4
        ],
    },
    include_all = True,
)
use_repo(system_sdk, "system_sdk")

bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)

non_module_deps = use_extension("//apple:extensions.bzl", "non_module_deps")
use_repo(non_module_deps, "xctestrunner")

provisioning_profile_repository = use_extension("//apple:apple.bzl", "provisioning_profile_repository_extension")
use_repo(provisioning_profile_repository, "local_provisioning_profiles")

apple_cc_configure = use_extension("@apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc")

register_toolchains("//apple/internal:apple_xplat_toolchain")

single_version_override(
    module_name = "bazel_features",
    patch_strip = 1,
    patches = [
        # NOTE: Only required until we get past 84c0253add3784b75ff08b6d049a7f152c7b7532 on 10.x CI
        # https://github.com/bazel-contrib/bazel_features/pull/144
        "//:bazel_features.patch",
    ],
)
