load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "rules-apple",
    bzl_library_target = "//apple:apple",
)

stardoc_with_diff_test(
    name = "rules-docc",
    bzl_library_target = "//apple:docc",
)

stardoc_with_diff_test(
    name = "rules-dtrace",
    bzl_library_target = "//apple:dtrace",
)

stardoc_with_diff_test(
    name = "rules-header_map",
    bzl_library_target = "//apple:header_map",
)

stardoc_with_diff_test(
    name = "rules-ios",
    bzl_library_target = "//apple:ios.doc",
)

stardoc_with_diff_test(
    name = "rules-macos",
    bzl_library_target = "//apple:macos.doc",
)

stardoc_with_diff_test(
    name = "providers",
    bzl_library_target = "//apple:providers",
)

stardoc_with_diff_test(
    name = "rules-resources",
    bzl_library_target = "//apple:resources",
)

stardoc_with_diff_test(
    name = "rules-tvos",
    bzl_library_target = "//apple:tvos.doc",
)

stardoc_with_diff_test(
    name = "rules-versioning",
    bzl_library_target = "//apple:versioning",
)

stardoc_with_diff_test(
    name = "rules-visionos",
    bzl_library_target = "//apple:visionos.doc",
)

stardoc_with_diff_test(
    name = "rules-watchos",
    bzl_library_target = "//apple:watchos.doc",
)

stardoc_with_diff_test(
    name = "rules-xcarchive",
    bzl_library_target = "//apple:xcarchive",
)

stardoc_with_diff_test(
    name = "rules-xctrunner",
    bzl_library_target = "//apple:xctrunner",
)

update_docs()
