load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

py_library(
    name = "lib",
    srcs = glob(["lib/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "run",
    srcs = ["run.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [":lib"],
)
